// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuBar: index mapStateToProps 1`] = `
Object {
  "currentUser": Object {
    "address": "86ee0c9644611495c0a1b1074e40d4e6db2f6b26",
    "id": 6,
    "username": "tanuj41",
  },
  "isLoggedIn": true,
}
`;

exports[`MenuBar: index renders enterprise mode button execute block api 1`] = `
<button
  className="pt-button pt-minimal pt-small"
  onClick={[Function]}
>
  Bloc API
</button>
`;

exports[`MenuBar: index renders enterprise mode button execute strato api 1`] = `
<button
  className="pt-button pt-minimal pt-small"
  onClick={[Function]}
>
  STRATO API
</button>
`;

exports[`MenuBar: index renders enterprise mode component with values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"32\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span className=\\"pt-navbar-divider\\" />
    <small className=\\"pt-text-muted\\">
      SMD v
       - 
      Enterprise
       
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus/consoles/index.html.example\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/bloc/v2.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" id=\\"tour-bloc-api-button\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Bloc API
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/strato-api/eth/v1.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          STRATO API
        </button>
      </a>
      <span>
        <span className=\\"pt-navbar-divider\\" />
        <small className=\\"pt-text-muted welcome-user\\">
           Welcome, 
          tanuj44
           
        </small>
        <span className=\\"pt-navbar-divider\\" />
        <a target=\\"_blank\\" rel=\\"noopener noreferrer\\">
          <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
            Logout
          </button>
        </a>
      </span>
    </div>
  </div>
</nav>"
`;

exports[`MenuBar: index renders enterprise mode component without values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"32\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span className=\\"pt-navbar-divider\\" />
    <small className=\\"pt-text-muted\\">
      SMD v
       - 
      Enterprise
       
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus/consoles/index.html.example\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/bloc/v2.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" id=\\"tour-bloc-api-button\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Bloc API
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/strato-api/eth/v1.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          STRATO API
        </button>
      </a>
    </div>
  </div>
</nav>"
`;

exports[`MenuBar: index renders public mode button execute block api 1`] = `
<button
  className="pt-button pt-minimal pt-small"
  onClick={[Function]}
>
  Bloc API
</button>
`;

exports[`MenuBar: index renders public mode button execute for developer 1`] = `null`;

exports[`MenuBar: index renders public mode button execute logout 1`] = `
<button
  className="pt-button pt-minimal pt-small"
  onClick={[Function]}
>
  Logout
</button>
`;

exports[`MenuBar: index renders public mode button execute strato api 1`] = `
<button
  className="pt-button pt-minimal pt-small"
  onClick={[Function]}
>
  STRATO API
</button>
`;

exports[`MenuBar: index renders public mode component with values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"32\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span className=\\"pt-navbar-divider\\" />
    <small className=\\"pt-text-muted\\">
      SMD v
       - 
      Public
       
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus/consoles/index.html.example\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/bloc/v2.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" id=\\"tour-bloc-api-button\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Bloc API
        </button>
      </a>
      <a href=\\"http://localhost/docs/?url=/strato-api/eth/v1.2/swagger.json\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          STRATO API
        </button>
      </a>
      <span>
        <span className=\\"pt-navbar-divider\\" />
        <small className=\\"pt-text-muted welcome-user\\">
           Welcome, 
          tanuj44
           
        </small>
        <span className=\\"pt-navbar-divider\\" />
        <a target=\\"_blank\\" rel=\\"noopener noreferrer\\">
          <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
            Logout
          </button>
        </a>
      </span>
    </div>
  </div>
  <div>
    <withRouter(Connect(Login)) />
    <withRouter(Connect(WalkThrough)) />
  </div>
</nav>"
`;

exports[`MenuBar: index renders public mode component without values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"32\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <Blueprint.Button onClick={[Function: onClick]} text=\\"Developer Sign In\\" className=\\"pt-button pt-small pt-intent-primary\\" />
    <span className=\\"pt-navbar-divider\\" />
    <small className=\\"pt-text-muted\\">
      SMD v
       - 
      Public
       
    </small>
  </div>
  <div>
    <withRouter(Connect(Login)) />
    <withRouter(Connect(WalkThrough)) />
  </div>
</nav>"
`;
